conversion to orange background

--- a/index.html
+++ b/index.html
@@ -36,12 +36,10 @@
         <![endif]-->
 		
 		<header>
-			<h1>Papercade</h1>
-			<div class="mascots"></div>
+			<img src="img/Papercade_Web_Horizontal.png" alt="Papercade - Say Hello to Scrap-Gaming!">
 		</header>
 		
 		<div class="content clearfix">
-			<h2>Say Hello to Scrap-Gaming!</h2>
 			<div class="ipad">
 				<div class="screen">
 				
@@ -53,8 +51,8 @@
 			
 			<div class="column full">
 				<p>Papercade is a game where players create & share tiny paper game-worlds crafted together from the pieces of their&nbsp;lives.</p>
-			
-				<p class="action bold">
+			  <hr width="100%">
+				<p class="action">
 					Subscribe for beta test info PLUS behind-the-scenes access to the game's&nbsp;development:
 				</p>
 			</div>
