--- a/terms.html
+++ b/terms.html
@@ -36,7 +36,8 @@
         <![endif]-->
 		
 		<header>
-			<h1>Papercade ✂ Policies</h1>
+			<!-- <h1>Papercade ✂ Policies</h1> -->
+			<img src="img/Papercade_Web_Horizontal.png" alt="Papercade - Say Hello to Scrap-Gaming!">
 		</header>
 		
 		<div class="longcontent clearfix">
