--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		 ga('send', 'pageview');
 		
 		</script>
-
+<meta name="p:domain_verify" content="06e3b3d8e8950aa2fadb73460fa3903d"/>
         <!--[if lt IE 9]>
             <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
             <script>window.html5 || document.write('<script src="js/vendor/html5shiv.js"><\/script>')</script>
