updated style for email_verification; added password templates (not customized yet)

--- a/email_verification.html
+++ b/email_verification.html
@@ -37,20 +37,25 @@
 		
 		<header>
 			<!-- <h1>Papercade ✂ Policies</h1> -->
-			<img src="img/Papercade_Web_Horizontal.png" alt="Papercade - Say Hello to Scrap-Gaming!">
+			<a href="/"><img src="img/Papercade_Web_Horizontal.png" alt="Papercade - Say Hello to Scrap-Gaming!"></a>
 		</header>
 		
-		<div class="longcontent clearfix">
-			<h2>Email Verified!</h2>
-			
-      <p>Thanks for verifying your email.</p>
-      <p>Now load up that app and start scrap-gaming!</p>
-      <p>&nbsp;</p>
-      <p>Other links:<br>
-      <a href="terms.html">Terms of Use, Copyright Dispute & Privacy Policy</a><br>
-      <a href="/">HOME</a>
-      </p>
+		<div class="content clearfix">
 
+      <h2>Thanks for verifying your email</h2>
+      <p>Now feel free to check out the<br>
+      <a href="terms.html">Terms of Use and Privacy Policy</a><br>
+      and then load up the app and start scrap-gaming!
+      </p>
+      
+			<p>&nbsp</p>
+			<p class="action">Join Papercade on your favourite social network:</p>
+			<p class="social">
+			<a class="button twitter" href="https://twitter.com/PapercadeGame">Twitter</a>
+			<a class="button googleplus" href="https://plus.google.com/107065335783936542996" rel="publisher">Google+</a> 
+			<a class="button facebook" href="https://www.facebook.com/PapercadeGame">Facebook</a>
+			<a class="button pinterest" href="http://www.pinterest.com/papercadegame">Pinterest</a>
+			</p>
 
     </div>
 
