papercade website text update

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			</div>
 			
 			<div class="column full">
-				<p>Craft and share your own diorama adventures with Papercade! Make and share your own mini-games with friends.</p>
+				<p>Craft and share your own diorama adventures with Papercade! Discover new ways to play together with friends.</p>
 			  <hr width="100%">
 				<p class="action">
 					Subscribe to our newsletter for updates about the latest from the Papercade community:
