--- a/credits.html
+++ b/credits.html
@@ -14,6 +14,7 @@
         <link href='http://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
         <script>
          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -38,28 +39,50 @@
         <![endif]-->
 
         <header>
-            <h1>Papercade ✂ Credits</h1>
+            <!--<h1>Papercade ✂ Credits</h1>-->
+            <a href="/"><img src="img/PapercadeLogo_small.jpg" alt="Papercade - Say Hello to Scrap-Gaming!"></a>
         </header>
 
-        <div class="longcontent clearfix">
+        <div class="content clearfix">
 
             <h2>Credits</h2>
 
 <p>Papercade is crafted by <a href="http://hololabs.org">Hololabs</a> with love and coffee from Montréal, Canada.</p>
 
-<p><strong>We are:</strong>
-Mike Wozniewski <a href="http://twitter.com/mikewoz"><i class="fa-li fa fa-twitter fa-fw"></i></a>
-Paul Warne
-Geoffrey Cooper 
-Jonathan Llewellyn
-Astrid Rosemarin</p>
+<p>Core team</p>
+<table>
+<tr><td>Mike Wozniewski <a href="http://twitter.com/mikewoz"><i class="fa-li fa fa-twitter fa-fw"></i></a></td><td>Programming</td></tr>
+<tr><td>Paul Warne</td><td>Design</td></tr>
+<tr><td>Geoffrey Cooper</td><td>Art</td></tr>
+<tr><td>Astrid Rosemarin</td><td>Communications</td></tr>
+<tr><td>Jonathan Llewellyn</td><td>Programming</td></tr>
+<tr><td>Stephen Ascher</td><td>Programming</td></tr>
+<tr><td>Eduardo Noya Schreus</td><td>Audio</td></tr>
+</table>
 
-<p><strong>Special thanks:</strong>
-Stephen Ascher  
-Stephane Paul
-Graeme Lennon  
-Tanya Short
-Lacy Barry
+<p>Development and consulting ?</p>
+<table>
+<tr><td>Stephane Paul</td><td>Backend server technology</td></tr>
+<tr><td>FanTrust</td><td>Social media &amp; community</td></tr>
+<tr><td>Graeme Lennon</td><td>Design development</td></tr>
+<tr><td>Tanya Short</td><td>Design development</td></tr>
+<tr><td>Lacy Barry</td><td>Prototyping</td></tr>
+</table>
+
+
+<p><strong>Special thanks:</strong><br>
+all our beta testers (beth!)<br>
+Tanya McGinnity<br>
+our family, specifically Rachel and Steph<br>
+Rachel's parents (plane tickets)</br>
+Mariko<br>
+Moora<br>
+Benoit<br>
+Ross<br>
+TAG<br>
+Jason Della Roca<br>
+Execution Labs (meetups, invites)<br>
+Jean-Pierre Faucher, Inno-Centre<br>
 
 </div>
 
