--- a/support.html
+++ b/support.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Papercade ✂ Email Verification</title>
+        <title>Papercade ✂ Support</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 		
@@ -38,17 +38,15 @@
 		
 		<header>
 			<!-- <h1>Papercade ✂ Policies</h1> -->
-			<a href="/"><img src="img/Papercade_Web_Horizontal.png" alt="Papercade - Say Hello to Scrap-Gaming!"></a>
+			<a href="/"><img src="img/PapercadeLogo_small.jpg" alt="Papercade - Say Hello to Scrap-Gaming!"></a>
 		</header>
 		
 		<div class="content clearfix">
 
-      <h2>Thanks for verifying your email</h2>
-      <p>Now feel free to check out the<br>
-      <a href="terms.html">Terms of Use and Privacy Policy</a><br>
-      and then load up the app and start scrap-gaming!
-      </p>
-      
+      <iframe src="https://docs.google.com/forms/d/1r25PHOxpuTVzDYg7ah9DCL1bRJbOQj02TYWDBF4-tl0/viewform?embedded=true" width="80%" height="1200" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+      <!--
+      <iframe src="https://docs.google.com/a/hololabs.org/forms/d/1nAmVlOUwG6yWml_XA0eqBmnfL6aOzXDpW5Mvf1rCbVU/viewform?embedded=true" width="80%" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+			-->
 			<p>&nbsp</p>
 			<p class="action">Join Papercade on your favourite social network:</p>
 			<p class="social">
@@ -59,7 +57,6 @@
 			</p>
 
     </div>
-
 
 		<footer>
 			Papercade is being built by <a href="http://www.hololabs.org">Hololabs</a> in Montréal in partnership
