new youtube video

--- a/index.html
+++ b/index.html
@@ -45,16 +45,15 @@
 				<div class="screen">
 				
 					<!-- Note: Video embed goes here. Height and width should be set to 100% -->
-					<iframe width="100%" height="100%" src="//www.youtube.com/embed/8u1StVYASCk?rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
-					
+					<iframe width="100%" height="100%" src="//www.youtube.com/embed/_CVJGj2rDx4?rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 				</div>
 			</div>
 			
 			<div class="column full">
-				<p>Craft and share your own diorama adventures with Papercade! Discover new ways to play together with friends.</p>
+				<p>Papercade is a game where players create & share tiny paper game-worlds crafted together from the pieces of their&nbsp;lives.</p>
 			  <hr width="100%">
 				<p class="action">
-					Subscribe to our newsletter for updates about the latest from the Papercade community:
+					Subscribe for beta test info PLUS behind-the-scenes access to the game's&nbsp;development:
 				</p>
 			</div>
 			
