replaced header image on several pages, updated credits

--- a/credits.html
+++ b/credits.html
@@ -40,28 +40,27 @@
 
         <header>
             <!--<h1>Papercade ✂ Credits</h1>-->
-            <a href="/"><img src="img/PapercadeLogo_small.jpg" alt="Papercade - Say Hello to Scrap-Gaming!"></a>
+            <a href="/"><img src="img/Papercade_Web_Horizontal_Title.png" alt="Papercade - Say Hello to Scrap-Gaming!"></a>
         </header>
 
         <div class="content clearfix">
 
             <h2>Credits</h2>
 
-<p>Papercade is crafted by <a href="http://hololabs.org">Hololabs</a> with love and coffee from Montréal, Canada.</p>
+<p>Papercade is crafted by <a href="http://hololabs.org">Hololabs</a><br> with love and coffee from Montréal, Canada.</p>
 
-<p>Core team</p>
 <table>
+
+<tr><td colspan="2" class="tableHeading">Core team</td></tr>
 <tr><td>Mike Wozniewski <a href="http://twitter.com/mikewoz"><i class="fa-li fa fa-twitter fa-fw"></i></a></td><td>Programming</td></tr>
 <tr><td>Paul Warne</td><td>Design</td></tr>
 <tr><td>Geoffrey Cooper</td><td>Art</td></tr>
-<tr><td>Astrid Rosemarin</td><td>Communications</td></tr>
+<tr><td>Astrid Rosemarin</td><td>Communications &amp; community</td></tr>
 <tr><td>Jonathan Llewellyn</td><td>Programming</td></tr>
 <tr><td>Stephen Ascher</td><td>Programming</td></tr>
 <tr><td>Eduardo Noya Schreus</td><td>Audio</td></tr>
-</table>
 
-<p>Development and consulting ?</p>
-<table>
+<tr><td colspan="2" class="tableHeading">Development and consulting</td></tr>
 <tr><td>Stephane Paul</td><td>Backend server technology</td></tr>
 <tr><td>FanTrust</td><td>Social media &amp; community</td></tr>
 <tr><td>Graeme Lennon</td><td>Design development</td></tr>
@@ -69,20 +68,22 @@
 <tr><td>Lacy Barry</td><td>Prototyping</td></tr>
 </table>
 
-
-<p><strong>Special thanks:</strong><br>
-all our beta testers (beth!)<br>
+<p>Special thanks</p>
+<p class="specialThanks">
+All our beta testers<br>
+Our families, specifically Rachel and Steph<br>
 Tanya McGinnity<br>
-our family, specifically Rachel and Steph<br>
-Rachel's parents (plane tickets)</br>
-Mariko<br>
-Moora<br>
-Benoit<br>
-Ross<br>
+Mariko McDonald<br>
+Moura Melondeau<br>
+Benoit Delassus<br>
+Ross Derham<br>
 TAG<br>
-Jason Della Roca<br>
-Execution Labs (meetups, invites)<br>
+MRGS<br>
+Jason Della Rocca<br>
+Execution Labs<br>
 Jean-Pierre Faucher, Inno-Centre<br>
+</p>
+
 
 </div>
 
