--- a/support.html
+++ b/support.html
@@ -38,12 +38,12 @@
 		
 		<header>
 			<!-- <h1>Papercade ✂ Policies</h1> -->
-			<a href="/"><img src="img/PapercadeLogo_small.jpg" alt="Papercade - Say Hello to Scrap-Gaming!"></a>
+			<a href="/"><img src="img/Papercade_Web_Horizontal_Title.png" alt="Papercade - Say Hello to Scrap-Gaming!"></a>
 		</header>
 		
 		<div class="content clearfix">
 
-      <iframe src="https://docs.google.com/forms/d/1r25PHOxpuTVzDYg7ah9DCL1bRJbOQj02TYWDBF4-tl0/viewform?embedded=true" width="80%" height="1200" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+      <iframe src="https://docs.google.com/forms/d/1r25PHOxpuTVzDYg7ah9DCL1bRJbOQj02TYWDBF4-tl0/viewform?embedded=true" width="80%" height="1100" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
       <!--
       <iframe src="https://docs.google.com/a/hololabs.org/forms/d/1nAmVlOUwG6yWml_XA0eqBmnfL6aOzXDpW5Mvf1rCbVU/viewform?embedded=true" width="80%" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 			-->
