revised papercade blurb, added first link to press kit.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
 			</div>
 			
 			<div class="column full">
-				<p>Craft and share your own diorama adventures with Papercade! Discover new ways to play together with friends.</p>
+				<p>Papercade is a free online arcade where a community of mobile players can easily craft, play and share personalized mini-game dioramas built from photographs and paper cutouts. Discover new ways to play together with friends!</p>
+              
+              <p>Coming soon to an iPad near you.</p>
+              
+              <p>From the press? Check out our <a href="http://www.hololabs.org/projects/papercade/">online press kit</a> for more.  
 			<hr width="100%">
 				<p class="action">
 					Subscribe to our newsletter for updates about the latest from the Papercade community:
