--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 			</div>
 			
 			<div class="column full">
-				<p>Papercade is a free online arcade where a community of mobile players can easily craft, play and share personalized mini-game dioramas built from photographs and paper cutouts. Discover new ways to play together with friends!</p>
+				<p>Papercade is a free online arcade where a community of players can easily craft, play and share personalized mini-game dioramas built from photographs and paper cutouts. Discover new ways to play together with friends!</p>
               
               <p>Coming soon to an iPad near you.</p>
-              
+              <hr width="100%">
               <p>From the press? Check out our <a href="http://www.hololabs.org/projects/papercade/">online press kit</a> for more.  
 			<hr width="100%">
 				<p class="action">
