--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Papercade ✂ Say Hello to Scrap-Gaming!</title>
+        <title>Papercade ✂ Say Hello to Scrapgaming!</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 		
@@ -50,7 +50,9 @@
 			</div>
 			
 			<div class="column full">
-				<p>Papercade is a free online arcade where a community of players can easily craft, play and share personalized mini-game dioramas built from photographs and paper cutouts. Discover new ways to play together with friends!</p>
+				<p>Say hello to scrapgaming with Papercade!
+
+Transform your photos into custom characters and paper cutouts. Craft your own personalized mini-games, share your original creations with the world, and discover new ways to play. It's easy and fun for everyone! </p>
               
               <p><a href="https://itunes.apple.com/us/app/papercade-craft-share-your/id908734397?mt=8&uo=4" target="itunes_store" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/htmlResources/assets/en_us//images/web/linkmaker/badge_appstore-lrg.png) no-repeat;width:135px;height:40px;@media only screen{background-image:url(https://linkmaker.itunes.apple.com/htmlResources/assets/en_us//images/web/linkmaker/badge_appstore-lrg.svg);}"></a></p>
               <hr width="100%">
